--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,11 @@ h1{
     text-align: right;
 }
 h2{
-    font-weight: 700;
     font-size: 87px;
     line-height: 118px;
     margin-bottom: 35px;
 }
 h3{
-    font-weight: 700;
     font-size: 48px;
     line-height: 145%;
     margin-bottom: 30px;
@@ -88,6 +86,7 @@ a{
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
+    justify-content: space-around;
 }
 .card{
    max-width: 360px; 
@@ -109,9 +108,7 @@ button:hover{
     border: 2px solid #535353;
     box-shadow: inset 0px 20px 35px rgba(0, 0, 0, 0.28);
 }
-.catalog,
-.contacts,
-.sign,
+section,
 footer{
     margin-top: 122px;
 }
@@ -136,7 +133,7 @@ input{
     display: block;
     margin-top: 30px;
     padding: 22px 15px;
-    width: 540px;
+    width: 100%;
 }
 input::placeholder{
     font-size: 20px;
@@ -150,7 +147,6 @@ footer{
     
 }
 footer a{
-    font-weight: ;
     font-size: 15px;  
 }
 footer li{
@@ -159,6 +155,7 @@ footer li{
 .name{
     font-weight: 700;
     font-size: 40px;
+    line-height: 145%;
     padding: 177px 0;
     margin-right: 90px;
 }
@@ -177,9 +174,218 @@ footer li{
     justify-content: space-between;
     align-items: center;
 }
-.nav-list li:hover,
-.footer-list li:hover{
+.nav-list li a:hover,
+.footer-list li a:hover{
     border-top: 2px solid #D9D9D9;
     transition: .1s;
     border-bottom: 2px solid #D9D9D9;
+}
+.more{
+    max-width:240px ;
+    font-size: 11px;
+    line-height: 145%;
+    display: block;
+    margin: 50px auto;
+}
+.fs64 {
+    font-size: 64px;
+}
+.pt{
+    padding-right: 15px;
+}
+/*===========responsive=====*/
+
+@media screen and (max-width:1215px){
+    h1{
+        font-size: 85px;
+
+    }
+    .offer_text {
+        font-size: 28px;
+    }
+    .bg{
+        height: 250px;
+    }
+    .c2{
+        order:1;
+    }
+    .c5{
+        order:2;
+    }
+    .c1{
+        order: 3;
+    }
+    .c3{
+        order: 4;
+    }
+    .c4{
+        order: 5;
+    }
+    .c6{
+        order: 6;
+    }
+    .nav-list{
+        gap: 50px;
+    }
+    .offer_img img{
+        width: 40%;
+    }
+    h2{
+        font-size: 72px;
+    }
+    .contact-list li{
+        font-size: 24px;
+    }
+    h3{
+        font-size: 36px;
+    }
+}
+@media screen and (max-width:992px){
+    h1{
+        font-size: 72px;
+    }
+    h2{
+        font-size: 64px;
+    }
+    h3{
+        font-size: 32px;
+    }
+    .offer_text{
+        font-size: 24px;
+    }
+    .offer_img img {
+        width: 30%;
+        top:100px
+    }
+    input::placeholder {
+        font-size: 14px;
+        line-height: 145%;
+        color: #616161;
+    }
+    .about {
+        margin-top: 50px;
+    }
+    .bg {
+        height: 150px;
+    }
+    .about p{
+        font-size: 24px;
+    }
+    .flex{
+        flex-wrap: wrap;
+    }
+    .right{
+        text-align: left;
+    }
+    .jcc{
+        justify-content: center;
+        gap: 20px;
+    }
+    .nav-list{
+        display: none;
+    }
+    .nav-list.active{
+        display: block;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        z-index: 6;
+        margin: 0;
+        left: 0;
+        text-align: left;
+        background-color: rgba(0,0,0, 0.9);
+    }
+    .nav-list.active li{
+        margin-left: 20px;
+    }
+    .nav-list.active li:first-child {
+        margin-top: 40px;
+    }
+    /*burger*/
+    .burger {   
+        width: 40px;
+        height: 25px;
+        position: relative;
+        display: block;
+        margin-left: auto;
+        margin-right: 15px; 
+        margin-top: 30px;
+        z-index: 10;
+    }
+    .burger span,
+    .burger::before,
+    .burger::after {
+        height: 3px;
+        background-color: #f1f1f1;
+        width: 100%;
+        left: 0;
+        position: absolute;
+        margin: 0 auto;
+    }
+    .burger::after {
+        content: '';
+        bottom: 0px;
+        height: 3.5px;
+    }
+    .burger::before {
+        content: '';
+        top: 0px;
+        height: 3.5px;
+    }
+    .burger span {
+        top: 11px;
+    }
+    
+}
+@media screen and (max-width:768px){
+    .card-bigger img,
+    .card-bigger button{
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+        
+    }
+    .card-bigger button{
+        display: block;
+            margin: 30px auto 0 auto;
+    }
+    .card img,
+    .card button {
+        width: 90%;
+        display: block;
+        margin: 0 auto;
+    }
+    .card button {
+        display: block;
+        margin: 30px auto 0 auto;
+    }
+    .name{
+        margin-right: 20px;
+    }
+    h2,
+    .fs64{
+        font-size: 56px;
+    }
+    
+}
+/*burger*/
+.burger.active{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+.burger.active span{
+    display: none;
+}
+.burger.active::after{
+    transform: rotate(45deg);
+    bottom: 11px;
+}
+.burger.active::before {
+    transform: rotate(-45deg);
+    top:10px
+}
+.mb{
+    margin-bottom: 50px;
 }
